# whatstatedata

./: .gitignore  Cargo.toml  README.md  data.csv  sources.json
.github/: FUNDING.yml
cost_of_living/: Cargo.toml  README.md
cost_of_living/src/: main.rs
eia/: Cargo.toml  README.md
eia/src/: main.rs
maryland/: Cargo.toml  README.md
maryland/src/: demographic.rs  lib.rs  main.rs  quality_of_life.rs  taxes.rs  workforce.rs
noaa/: Cargo.toml  README.md
noaa/src/: main.rs
nps/: Cargo.toml
nps/src/: main.rs
solar_prices/: Cargo.toml
solar_prices/src/: main.rs
src/: main.rs  states.rs
states/: Cargo.toml
states/src/: lib.rs
