[package]
name = "cost_of_living"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
color-eyre = "0.5.8"
select = "0.5.0"
states = { path = "../states" }
serde_json = "1.0.59"
