[package]
name = "eia"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"
description = "Download and parse data from https://www.eia.gov/developer/"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
dotenv = "0.15.0"
anyhow = "1.0.33"
states = {path="../states"}
futures = "0.3.10"
tokio = { version = "0.2.22", features = ["macros", "rt-core", "fs"] }
reqwest = "0.10.8"

