[package]
name = "maryland"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"
description = "Maryland publishes a bunch of data comparing different states. This bin compiles some of it."

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "rt-core", "fs"] }
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.59"
anyhow = "1.0.33"
states = {path="../states"}
futures = "0.3.6"
