[package]
name = "noaa"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"

[dependencies]
async-std = {version="1.6.2", features=["attributes"]}
surf = "2.0.0-alpha.5"
serde = { version="1.0.116", features=["derive"]}
serde_json = "1.0.56"
eyre = "0.6.0"
states = { path = "../states" }
futures = "0.3.5"
dotenv = "0.15.0"
backoff = { version="0.2.1", features=["async-std"] }
