[package]
name = "noaa"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.24", features = ["macros", "rt-core", "fs"] }
reqwest = "0.10.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
eyre = "0.6.1"
states = { path = "../states" }
futures = "0.3.6"
dotenv = "0.15.0"
backoff = { version = "0.2.1", features = ["tokio"] }
