[package]
name = "nps"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"
description = "For fetching data from the National Park Service"

[dependencies]
async-std = {version="1.6.3", features=["attributes"]}
surf = "2.0.0-alpha.5"
serde = { version="1.0.116", features=["derive"]}
serde_json = "1.0.56"
dotenv = "0.15.0"
anyhow = "1.0.32"
states = {path="../states"}
futures = "0.3.5"
