[package]
name = "nps"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"
description = "For fetching data from the National Park Service"

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "rt-core", "fs"] }
reqwest = "0.10.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
anyhow = "1.0.33"
states = {path="../states"}
futures = "0.3.6"
