[package]
name = "solar_prices"
version = "0.1.0"
authors = ["Dylan Anthony <contact@dylananthony.com>"]
edition = "2018"
description = "Parse the data from https://emp.lbl.gov/tracking-the-sun into useful numbers for this project"

[dependencies]
csv = "1.1.3"
serde_json = "1.0.56"
anyhow = "1.0.32"
serde = { version = "1.0.117", features = ["derive"] }
time = { version = "0.2.19", features = ["serde"] }
states = { path = "../states" }
